[package]
name = "trnnut-rs"
version = "0.1.1"
authors = ["The Root Network Team"]
edition = "2018"
description = "The official rust trnnut codec"
license = "UNLICENSED"
repository = "https://github.com/futureversecom/trn-trnnut-rs"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.9", default-features = false }
pact = { branch = "0.1.0", git = "https://github.com/cennznet/pact", default-features = false }
serde = { version = "1.0.145", optional = true, features = ["derive"] }
serde_json = "1.0"

[features]
default = [ "std" ]
std = [
  "codec/std",
  "pact/std",
  "serde/std",
  "serde_json/std"
]
