[package]
name = "trnnut-rs"
version = "0.1.1"
authors = ["The Root Network Team"]
edition = "2021"
description = "The official rust trnnut codec"
license = "UNLICENSED"
repository = "https://github.com/futureversecom/trn-trnnut-rs"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = ["derive"] }
serde = { version = "1.0.145", default-features = false, features = ["derive", "alloc"] }

# pact = { git = "https://github.com/futureversecom/trn-pact", branch = "feat/wasm-pack", default-features = false }
pact = { path = "../trn-pact/", default-features = false }

[features]
default = [ "std" ]
std = [
  "codec/std",
  "pact/std",
  "serde/std",
]
