[package]
name = "js"
version = "0.0.1"
authors = ["The Root Network Team"]
edition = "2021"
description = "JS/Wasm bindings for the rust TRNNut codec"
license = "UNLICENSED"
repository = "https://github.com/futureversecom/trn-trnnut-rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
trnnut-rs = { path = "../", default-features = false }
pact = { branch = "feat/wasm-pack", git = "https://github.com/futureversecom/trn-pact", default-features = false }

codec = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = ["derive"] }
serde-wasm-bindgen = "0.6.3"
wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"]  }
clear_on_drop = { version = "0.2.3", features = ["no_cc"] }
console_error_panic_hook = "0.1"

[profile.release]
# disable loop vectorization for smaller wasm
opt-level = "z"
# disable parallel compilation
codegen-units = 1
lto = true
